--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,46 @@
-.App {
-  text-align: center;
+.info-wrapper {
+    width: 350px;
+    height: 150px;
+    border: 3px solid #7986ae;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.push-text {
+    width: 277px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app {
+    margin: 5% 10%;
+}
+h1, h2 {
+    display: inline-block;
+    margin-right: 15px;
+}
+p {
+    margin: 5px;
+    border: 1px solid gray;
 }
 
-.App-link {
-  color: #61dafb;
+.inner-box {
+    margin-top: 25px;
+    width: 350px;
+    height: 100px;
+    border: 3px solid #9e5a5d;
+    text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.car-wrapper {
+    margin: 30px 10px 0;
+    display: inline-block;
+    width: 200px;
+    height: 100px;
+    padding: 15px;
+    border: 2px solid lightskyblue;
+    text-align: center;
+}
+
+.show-cars-btn {
+    display: block;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background: lightskyblue;
 }
